--- a/css2.css
+++ b/css2.css
@@ -18,7 +18,7 @@
   --link-color-hover: #9adfff;
   --label-text-color: #fff;
 
-  --text:#bbb;
+  --text:#fff;
   --text-hover: #fff;
   --text-muted: #999;
 
